# helixscreen

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  COPYRIGHT  DEVELOPMENT.md  Doxyfile  HANDOFF.md  Makefile  README.md  STATUS.md  TEMP_GRAPH_USAGE.md  lv_conf.h  package.json
.claude/: LESSONS.md
.claude-recall/: LESSONS.md
.coding-agent-lessons/: LESSONS.md
android/: .gitignore  build.gradle  local.properties.example
android/app/jni/: CMakeLists.txt
android/app/jni/src/: CMakeLists.txt
config/: helix-launcher.sh  helixconfig.json.template  helixscreen.env  helixscreen.init  helixscreen.service  printer_database.json  printing_tips.json
docker/: Dockerfile.ad5m  Dockerfile.cc1  Dockerfile.pi  Dockerfile.pi32  build-toolchains.sh
docs/: AD5M_TOOLCHAIN_NOTES.md  ADDING_MATERIAL_ICONS.md  ARCHITECTURAL_DEBT.md  ARCHITECTURE.md  BUILD_SYSTEM.md  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT_HEADERS.md  DEVELOPER_QUICK_REFERENCE.md  DOCUMENTATION_PLAN.md  DRY_CONSOLIDATION_PROGRESS.md  ENVIRONMENT_VARIABLES.md  FEATURE_PARITY_RESEARCH.md  FILE_DOCUMENTATION_TRACKING.md  HANDOFF.md  HELIX_PRINT_PLUGIN_TESTING.md  HIDDEN_TESTS_TRACKER.md  IDEAS.md  INPUT_SHAPING_IMPLEMENTATION.md  LAYOUT_SYSTEM.md  LVGL9_XML_ATTRIBUTES_REFERENCE.md  LVGL9_XML_GUIDE.md  LV_SIZE_CONTENT_GUIDE.md  MAINSAIL_RESEARCH.md  MOONRAKER_WIRING_PLAN.md  OVERLAY_REFACTOR.md  PLATFORM_RENDERING_PLAN.md  PLUGIN_DEVELOPMENT.md  PRE_PRINT_REFACTOR_PLAN.md  PRINTERSTATE_DECOMPOSITION_HANDOFF.md  QUICK_REFERENCE.md  README.md  REFACTOR_PLAN.md  RESPONSIVE_DESIGN_PATTERN.md  ROADMAP.md  SOUND_SETTINGS.md  STANDARD_MACROS_HANDOFF.md  TESTING.md  TEST_TAG_TAXONOMY.md  UI_REFACTORING_PLAN.md  (+1 more)
include/: abort_manager.h  accel_sensor_manager.h  accel_sensor_types.h  action_prompt_manager.h  action_prompt_modal.h  active_print_media_manager.h  advanced_panel_types.h  afc_config_manager.h  afc_defaults.h  ams_backend.h  ams_backend_afc.h  ams_backend_happy_hare.h  ams_backend_mock.h  ams_backend_toolchanger.h  ams_backend_valgace.h  ams_error.h  ams_state.h  ams_subscription_backend.h  ams_types.h  android_asset_extractor.h  app_constants.h  app_globals.h  application.h  async_helpers.h  audio_settings_manager.h  backlight_backend.h  bed_mesh_internal.h  bed_mesh_renderer.h  calibration_types.h  cli_args.h  color_utils.h  config.h  data_root_resolver.h  display_backend.h  display_backend_drm.h  display_backend_fbdev.h  display_manager.h  display_settings_manager.h  ethernet_backend.h  ethernet_backend_linux.h  (+302 more)
mk/: cross.mk  deps.mk  display-lib.mk  fonts.mk  images.mk  patches.mk  remote.mk  rules.mk  splash.mk  tests.mk  tools.mk  translations.mk  watchdog.mk
moonraker-plugin/: README.md  TESTING_PLAN.md  helix_print.py  install.sh  remote-install.sh
patches/: README.md  lvgl-drm-plane-rotation.patch  lvgl_draw_sw_label_null_guard.patch  lvgl_fbdev_skip_unblank.patch  lvgl_image_parser_contain.patch  lvgl_sdl_window.patch  lvgl_xml_prop_const_resolution.patch
scripts/: LVGLImage.py  ad5m-screenshot.sh  add-copyright-headers.sh  add-spdx-headers.sh  audit_codebase.sh  bundle-installer.sh  check-deps.sh  convert-lvgl8-icons.sh  convert-material-icons-lvgl9.sh  convert-material-svgs.sh  debug-ad5m-boot.sh  dev-release.sh  download_printer_images.py  download_printer_images_headless.py  embed-icons-in-xml.py  fill_new_translations.py  gen_icon_consts.py  gen_splash_3d.py  generate-icon-consts.py  generate-manifest.sh  generate-screenshots.sh  generate_gradient_bg.py  generate_icon_header.py  generate_translations.py  helix-launcher.sh  init-worktree.sh  install-bundled.sh  install.sh  material_icons.py  package.sh  quality-checks.sh  regen_mdi_fonts.sh  regen_placeholder_images.sh  regen_printer_images.sh  regen_text_fonts.sh  resolve-backtrace.sh  review-ui-screenshot.sh  screenshot.sh  serve-local-update.sh  setup-worktree.sh  (+8 more)
src/: active_print_media_manager.cpp  ams_backend.cpp  ams_backend_mock.cpp  ams_backend_valgace.cpp  ams_state.cpp  app_globals.cpp  backlight_backend.cpp  bed_mesh_renderer.cpp  cli_args.cpp  color_utils.cpp  config.cpp  ethernet_backend.cpp  ethernet_backend_linux.cpp  ethernet_backend_macos.mm  ethernet_backend_mock.cpp  ethernet_manager.cpp  filament_sensor_manager.cpp  format_utils.cpp  gcode_file_modifier.cpp  gcode_geometry_builder.cpp  gcode_layer_renderer.cpp  gcode_ops_detector.cpp  gcode_parser.cpp  gcode_renderer.cpp  gcode_tinygl_renderer.cpp  helix_plugin_installer.cpp  helix_splash.cpp  helix_theme.c  helix_watchdog.cpp  layout_manager.cpp  logging_init.cpp  lvgl_init.cpp  macro_analysis_manager.cpp  main.cpp  material_icons.cpp  moonraker_api.cpp  moonraker_api_config.cpp  moonraker_api_history.cpp  moonraker_api_mock.cpp  moonraker_api_motion.cpp  (+108 more)
tests/: README.md  lvgl_test_fixture.cpp  lvgl_test_fixture.h  lvgl_ui_test_fixture.cpp  lvgl_ui_test_fixture.h  test_fixtures.cpp  test_fixtures.h  test_installer_verify_deps.sh  test_launcher_select.sh  ui_test_utils.cpp  ui_test_utils.h
tinygl/: Makefile
tools/: moonraker_inspector.cpp  moonraker_inspector_interactive.cpp  validate_xml_attributes.cpp  validate_xml_constants.cpp
translations/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  pt.yml  ru.yml  zh.yml
ui_xml/: abort_progress_modal.xml  about_overlay.xml  accel_sensor_row.xml  advanced_panel.xml  ams_context_menu.xml  ams_current_tool.xml  ams_device_operations.xml  ams_device_section_detail.xml  ams_dryer_card.xml  ams_edit_modal.xml  ams_loading_error_modal.xml  ams_overview_panel.xml  ams_panel.xml  ams_settings_maintenance.xml  ams_settings_nav_row.xml  ams_settings_spoolman.xml  ams_slot_edit_popup.xml  ams_unit_card.xml  app_layout.xml  bed_mesh_calibrate_modal.xml  bed_mesh_panel.xml  bed_mesh_rename_modal.xml  bed_mesh_save_config_modal.xml  bed_temp_panel.xml  beta_badge.xml  beta_feature.xml  calibration_modal.xml  calibration_pid_panel.xml  calibration_zoffset_panel.xml  camera_panel.xml  carousel.xml  chamber_temp_panel.xml  change_host_modal.xml  color_picker.xml  color_sensor_row.xml  coming_soon_overlay.xml  confirmation_dialog.xml  (+160 more)
(+1034 files in other folders)
